--- a/package.json
+++ b/package.json
@@ -18,8 +18,10 @@
 	"dependencies": {
 		"@electron-toolkit/preload": "^1.0.3",
 		"@electron-toolkit/utils": "^1.0.2",
+		"desmos-react": "^1.2.0",
 		"pure-react-carousel": "^1.30.1",
-		"react-feather": "^2.0.10"
+		"react-feather": "^2.0.10",
+		"react-slider": "^2.0.4"
 	},
 	"devDependencies": {
 		"@electron/notarize": "^1.2.3",
