--- a/package.json
+++ b/package.json
@@ -19,9 +19,16 @@
 		"@electron-toolkit/preload": "^1.0.3",
 		"@electron-toolkit/utils": "^1.0.2",
 		"desmos-react": "^1.2.0",
+		"fs": "^0.0.1-security",
 		"pure-react-carousel": "^1.30.1",
 		"react-feather": "^2.0.10",
-		"react-slider": "^2.0.4"
+		"react-slider": "^2.0.4",
+		"uuid": "^9.0.0"
+	},
+	"browser": {
+		"fs": false,
+		"path": false,
+		"os": false
 	},
 	"devDependencies": {
 		"@electron/notarize": "^1.2.3",
