--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
 	"scripts": {
 		"format": "prettier --write .",
 		"lint": "eslint . --ext .js,.jsx,.cjs,.mjs,.ts,.tsx,.cts,.mts --fix",
+		"test": "vitest",
+		"coverage": "vitest --coverage",
 		"start": "electron-vite preview",
 		"dev": "electron-vite dev --watch",
 		"build": "electron-vite build",
@@ -32,6 +34,7 @@
 	},
 	"devDependencies": {
 		"@electron/notarize": "^1.2.3",
+		"@testing-library/react": "^14.0.0",
 		"@vitejs/plugin-react": "^3.0.1",
 		"electron": "^21.3.3",
 		"electron-builder": "^23.6.0",
@@ -40,10 +43,12 @@
 		"eslint-config-prettier": "^8.6.0",
 		"eslint-plugin-prettier": "^4.2.1",
 		"eslint-plugin-react": "^7.31.11",
+		"jsdom": "^22.0.0",
 		"prettier": "^2.8.2",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
 		"sass": "^1.58.0",
-		"vite": "^4.0.4"
+		"vite": "^4.0.4",
+		"vitest": "^0.31.0"
 	}
 }
